# turing-machine

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: main.c
